--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -5,16 +5,6 @@ body {
     text-align: center;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
-  
-
-  html,
-  body,
-  * {
-    align-items: center;
-    padding: 0;
-    
-    box-sizing: border-box;
-  }
   .btn {
     height: 50px;
     width: 100px;
@@ -22,27 +12,17 @@ body {
     background-color: white;
     color: black;
    }
-   #men {
-    width: 100%;
-    height: auto;
+  #display {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
   }
-  
-  .card {
-    padding: 20px;
+   
+   .card {
     text-align: center;
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 25px;
     width: 29%;
-    height: 40vh;
-    background: whitesmoke;
-    border: 2px solid black;
-    box-shadow: 3px 3px 10px;
-    border-radius: 20px;
-    margin-bottom: 40px;
+    border-radius: 5rem;
+    border-color: black;
   }
-  
-  
